	PR target/48673 	* config/ia64/ia64.c (ia64_reorg): Clear BB_DISABLE_SCHEDULE flag 	in all basic blocks.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@174844 138bc75d-0d04-0410-961f-82ee72b054a4